--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@auth0/auth0-react": "^2.1.1",
+    "@auth0/auth0-react": "^2.2.0",
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
@@ -52,8 +52,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "typescript": "^5.1.6"
+  "devDependencies": {},
+  "resolutions": {
+    "typescript": "^4.3.5"
   },
   "homepage": "."
 }
